# cs430-project-5-image-viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  raytrace
examples/: 4_planes_1_sphere_4_lights_p6.ppm  simple_pointlight_p6.ppm  simple_spotlight_p6.ppm  test_image_01_p3.ppm  test_image_01_p6.ppm
lib/: libglfw.dylib
src/: main.c  myprog
